--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 <body>
 
     <audio id="musicaFundo" loop>
-        <source src="c:\Users\kjao0\Downloads\refree_beats.mp3.mpeg" type="audio/mpeg">
+        <source src="refree_beats.mp3" type="audio/mpeg">
         Seu navegador não suporta o elemento de áudio.
     </audio>
     <div class="container" id="gameContainer">
@@ -313,3 +313,4 @@
     </script>
 </body>
 </html>
+
